--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
