--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "stripe": "^15.8.0"
   },
   "name": "player-booking",
   "version": "1.0.0",
