--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
     "cloudinary": "^2.2.0",
+    "date-fns": "^3.6.0",
+    "decode": "^0.3.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "stripe": "^15.8.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
